# python-plot-utils

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  update_version.sh
doc/source/: conf.py  index.rst  installation_guide.rst
doc/source/api_docs/: 3d_histograms.rst  _convert_FIPS_to_state_name.rst  _find_axes_lim.rst  _translate_state_abbrev.rst  bin_and_mean.rst  category_means.rst  choropleth_map.rst  color_classes.rst  contingency_table.rst  correlation_matrix.rst  discrete_histogram.rst  fill_timeseries.rst  get_colors.rst  get_linespecs.rst  hist_multi.rst  linespecs_demo.rst  missing_values.rst  pad_img.rst  pie_chart.rst  plot_multiple_timeseries.rst  plot_ranking.rst  plot_time_series.rst  plot_with_bounds.rst  positive_rate.rst  scatter_plot_two_cols.rst  trim_image.rst  violin_plot.rst  visualize_cv_scores.rst
examples/: 3D_histograms_example.ipynb  Choropleth_map_example.ipynb  Color_and_linespec_examples.ipynb  Correlation_matrix_examples.ipynb  Discrete_histogram_example.ipynb  Missing_value_count_example.ipynb  Pie_chart_example.ipynb  Plot_ranking_example.ipynb  Plot_time_series_example.ipynb  Plot_with_error_bounds_example.ipynb  Two_columns_of_data_example.ipynb  Violin_plot_and_hist_multi_example.ipynb  Visualize_cross_validation_results.ipynb
examples/datasets/: DEC_10_SF1_GCTPH1.US05PR_with_ann.csv  Unemployment_rate_1976-2017.csv
plot_utils/: __init__.py  colors_and_lines.py  helper.py  image.py  maps.py  misc.py  multiple_columns.py  one_column.py  time_series.py  two_columns.py
plot_utils/shapefiles/usa_counties/: README.txt
(+1 files in other folders)
