[metadata]
name = plot_utils
version = v0.6.14
description = A Python library for elegant data visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsh9/python-plot-utils
license = GPL v3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find_namespace:
install_requires =
    numpy>=1.11.0
    scipy>=0.19.0
    pandas>=0.17.1
    cycler>=0.10.0
    matplotlib
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
include_package_data = True

[options.packages.find]
exclude =
    tests*
include =
    plot_utils
    plot_utils.*

[bdist_wheel]
universal = True
